-Alterados arquivos index.html e mystyel.css -Adicionado Carousel e estilos no css

--- a/www/_css/mystyle.css
+++ b/www/_css/mystyle.css
@@ -75,3 +75,16 @@ body{
 .affix {
     top:100px;
 }
+/* Carousel*/
+.carousel {
+    background:#009;
+}
+.carousel .item {
+  height: 300px;
+}
+.item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
